# CrewAI-Enterprise-Pipeline-Multi-Agent-Due-Diligence-System

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.prod.yml  docker-compose.yml
apps/api/: Dockerfile  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 001_initial_schema.py  002_pgvector_embedding.py  003_phase13_rich_reporting.py  004_phase15_enterprise_security.py  005_phase19_runtime_status_and_llm_control.py
apps/api/src/crewai_enterprise_pipeline_api/: __init__.py  main.py  worker.py
apps/api/src/crewai_enterprise_pipeline_api/agents/: compliance_tools.py  config.py  crew.py  financial_tools.py  models.py  phase10_tools.py  phase11_tools.py  phase12_tools.py  tools.py
apps/api/src/crewai_enterprise_pipeline_api/api/: dependencies.py  router.py  security.py
apps/api/src/crewai_enterprise_pipeline_api/core/: logging.py  rate_limit.py  security_utils.py  settings.py  telemetry.py
apps/api/src/crewai_enterprise_pipeline_api/db/: __init__.py  base.py  models.py  session.py
apps/api/src/crewai_enterprise_pipeline_api/domain/: __init__.py  models.py
apps/api/src/crewai_enterprise_pipeline_api/evaluation/: __init__.py  financial_fixtures.py  live_validation.py  performance.py  regression.py  runner.py  scenarios.py
apps/api/src/crewai_enterprise_pipeline_api/ingestion/: __init__.py  (+4 more)
apps/api/tests/: conftest.py  test_cases.py  test_evaluation.py  test_health.py  test_phase10_commercial_operations_cyber_forensic.py  test_phase11_motion_pack_deepening.py  test_phase12_sector_pack_deepening.py  test_phase13_rich_reporting.py  test_phase14_india_connectors.py  test_phase15_enterprise_security.py  test_phase16_observability.py  test_phase17_evaluation_deepening.py  test_phase18_release_packaging.py  test_phase19_runtime_control.py  test_phase1_fixes.py  test_phase2_api_completeness.py  test_phase3_infrastructure.py  test_phase4_document_intelligence.py  test_phase5_evidence_intelligence.py  test_phase7_crewai_orchestration.py  test_phase8_crewai_tools.py  test_phase8_financial_qoe.py  test_phase9_legal_tax_regulatory.py  test_security.py  test_source_adapters.py
(+126 files in other folders)
